# truehair-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Procfile  README.md  config.py  pyproject.toml  seed_hairstyles.py  seed_stylists.py
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  tests.yml
app/: __init__.py  models.py
app/routes/: admin.py  auth.py  main.py
app/services/: r2.py  session_identity.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: _admin_sidebar.html  admin_unauthorized.html  base.html  consent.html  dashboard.html  experiment_dashboard.html  gallery.html  landing.html  login.html  operations_dashboard.html  privacy.html  result.html  style_studio.html  stylists.html  terms.html
migrations/: env.py
migrations/versions/: 6481d85c2633_add_was_ai_recommended_to_generated_.py  6e7e1894b1e5_baseline_migration.py  85832af9eba3_add_reference_image_id_to_generatedimage.py  8fe812f5a8f2_baseline_schema.py  ae9086542a24_add_experiment_session_rating_and_.py  b7feb046b086_add_recommendation_model.py  bc4916c7d7df_add_experiment_group.py  c3a1d2b4e5f6_irb_anonymous_identity.py  d1e4f5a6b7c8_drop_consent_full_name.py  f0e2aaf0c2c7_refactor_image_pipeline_remove_.py
tests/: conftest.py  test_app_init.py  test_auth.py  test_experiment_metrics.py  test_models.py  test_r2_service.py  test_routes.py
